# ai-code-review

./: README.md  pyproject.toml
src/ai_code_review/: code_explorer.py  git_cli.py  main.py  ollama_provider.py  prompt_factory.py  reviewer.py
src/ai_code_review/code_explorer/: base_explorer.py  git_diff_explorer.py  project_files_explorer.py
